GPencil Textured-fill layer opacity not working #57835

Closed
opened 2018-11-15 01:21:19 +01:00 by Pablo Vazquez · 3 comments
Member

System Information
Ubuntu 17.10 Nvidia GTX 1050

Blender Version
Broken: 2.80.30

Short description of error
When changing the opacity of a layer with textured fill, only the solid colors fade.

Exact steps for others to reproduce the error
gpencil_texture_layer_opacity.blend

  • Open file, lower the opacity of the layer (Square Textured).
  • The stroke and colored fill materials fade, not the squares with the textured fill material.
**System Information** Ubuntu 17.10 Nvidia GTX 1050 **Blender Version** Broken: 2.80.30 **Short description of error** When changing the opacity of a layer with textured fill, only the solid colors fade. **Exact steps for others to reproduce the error** [gpencil_texture_layer_opacity.blend](https://archive.blender.org/developer/F5560024/gpencil_texture_layer_opacity.blend) * Open file, lower the opacity of the layer (Square Textured). * The stroke and colored fill materials fade, not the squares with the textured fill material.
Author
Member

Added subscriber: @pablovazquez

Added subscriber: @pablovazquez
Antonio Vazquez was assigned by Pablo Vazquez 2018-11-15 01:25:35 +01:00

This issue was referenced by 1b7b1d60c5

This issue was referenced by 1b7b1d60c5df7f2ca498e27c3f0977ff4a8ac25b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57835
No description provided.