Fix T57835: Textured-fill layer opacity not working

This was an unsupported feature.